Removed hard coded include path for xmerl, now use -include_lib. Added xmerl to included_applications in application resource file.
git-svn-id: http://hss.googlecode.com/svn/trunk@14 c600ed57-6546-0410-8418-a509452af272

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,7 @@
 ## $Id: Makefile,v 1.7 2008/02/17 11:50:10 vances Exp $
 
-ERL = erl
 ERLC = erlc
-ERLCFLAGS = -v -W -I $(incdir) -I /Users/otpuser/lib/erlang/lib/xmerl-1.1.6/include -o $(beamdir) +debug_info
+ERLCFLAGS = -v -W -I $(incdir) -o $(beamdir) +debug_info
 
 incdir	= ../include
 beamdir	= ../ebin
