--- a/rebar.config
+++ b/rebar.config
@@ -3,4 +3,4 @@
 {deps_dir, ["deps"]}.
 {deps, []}.
 {minimum_otp_vsn, "18.0"}.
-{pre_hooks, [{compile, "escript dia_compiler.erl compile"}]}.
+{pre_hooks, [{compile, "escript dia_compile.erl compile"}]}.
